--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@tailwindcss/postcss": "^4.1.13",
+    "flowbite": "^3.1.2",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "simple-datatables": "^10.0.0",
+    "tailwindcss": "^4.1.13",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -37,6 +43,7 @@
     "@angular/cli": "^20.3.3",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/xlsx": "^0.0.35",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
